non-compatible/tests/ecc-aws-005-rds_not_open_to_large_scope/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Allow all inbound traffic",
                "GroupName": "c7n_005_green",
                "IpPermissions": [
                    {
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "12.12.12.12/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 22,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-1212121212121212",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-12121212"
            }
        ],
        "ResponseMetadata": {}
    }
}
